--- a/Localizations/zh-Hant.lproj/Localizable.strings
+++ b/Localizations/zh-Hant.lproj/Localizable.strings
@@ -53,7 +53,7 @@
 "Welcome.Confirmation" = "確認";
 "Welcome.ConfirmationDesc" = "怕不小心按到讚？現在您可以放心了";
 "Welcome.Settings" = "簡潔";
-"Welcome.SettingsDesc" = "靈活、直觀的設定 — 完全為你量身打造";
+"Welcome.SettingsDesc" = "靈活、直覺的設定 — 完全為你量身打造";
 "Welcome.More" = "更多功能";
 "Welcome.MoreDesc" = "Glow 遠非僅止於功能列表，更為你的隱私與舒適體驗解鎖更多工具";
 "Welcome.SettingsInfo" = "長按底部任一圖示標籤即可進入 Glow 設定";
