--- a/Localizations/es.lproj/Localizable.strings
+++ b/Localizations/es.lproj/Localizable.strings
@@ -1,51 +1,72 @@
-"AnonymousStories"="Ver anónimamente";
-"AutoClearCache"="Borrar caché al iniciar";
-"Cache"="Caché";
-"Cancel"="Cancelar";
-"ClearCache"="Borrar caché";
-"Continue"="Continuar";
-"Developer"="Desarrolladores";
-"DeveloperFooter"="Programado con ❤️";
-"DisableAutoNext"="Deshabilitar auto avance";
-"DiscordDesc"="Unirse para Soporte, feedback, o un chat";
-"DonateMe"="Glow es completamente gratis. Siéntete libre de invitarme a un Café para apoyar su desarrollo";
-"DownloadReels"="Descargar reels";
-"DownloadStories"="Descargar stories";
-"DownloadStory"="Descargar story";
-"DownloadVideo"="Descargar vídeo";
-"DownloadVideos"="Descargar vídeos";
-"DownloadVideosDesc"="Descargar vídeos de feed y stories con una pulsación larga";
-"Downloading"="Descargando";
-"DvntmsDesc"="Todas mis repos en un mismo lugar";
-"FollowMe"="Sigue a %@ en Twitter";
-"GithubDesc"="Repositorio de Glow";
-"GlowSettings"="Ajustes de Glow";
-"HideOverlay"="Ocultar Superposición";
-"ImageNotFound"="Imagen no encontrada";
-"Main"="Principal";
-"MarkAsSeen"="Marcar como visto";
-"MarkedAsSeen"="Marcado como visto";
-"PostLikeConfirm"="Confirmar like en post";
-"Reels"="Reels";
-"ReelsLikeConfirm"="Confirmar like en reels";
-"ReelsLongTap"="Descargar con una pulsación larga";
-"ReelsLongTapDesc"="Respaldo para versiones anteriores que no tienen el botón de descarga";
-"RemoveAds"="Eliminar anuncios";
-"RemovePYMK"="Eliminar \"Personas que quizá conozcas\"";
-"RemoveReelsCarousel"="Eliminar carrusel de reels";
-"RemoveStoryPYMK"="Eliminar \"Personas que quizá conozcas\"";
-"SavedToPhotos"="Guardado en Fotos";
-"SomethingWentWrong"="Algo salió mal";
-"StoreDesc"="Consigue un certificado de desarrollador y disfruta de una amplia gama de apps exclusivas";
-"Stories"="Stories";
-"Welcome.Confirmation"="Confirmación";
-"Welcome.ConfirmationDesc"="¿Preocupado por likes accidentales? Ahora puedes relajarte.";
-"Welcome.Download"="Descargar Media";
-"Welcome.DownloadDesc"="Descarga todo lo que quieras — vídeos, imágenes, Reels, e incluso stories.";
-"Welcome.Incognito"="Modo Incógnito";
-"Welcome.IncognitoDesc"="Permanece sin ser visto. Mira stories y márcalas como vistas sólo si tu quieres";
-"Welcome.More"="Y más";
-"Welcome.MoreDesc"="Glow no es sólo una lista de características. Desbloquea incluso más herramientas para el comfort y la privacidad.";
-"Welcome.Settings"="Sencillez";
-"Welcome.SettingsDesc"="Ajustes flexibles, intuitivos — todo a tu medida.";
-"Welcome.SettingsInfo"="Los ajustes de Glow están disponibles con una pulsación larga en cualquier pestaña";
+"Main" = "Principal";
+"RemoveAds" = "Eliminar anuncios";
+"RemovePYMK" = "Eliminar \"Personas que quizá conozcas\"";
+"RemoveReelsCarousel" = "Eliminar carrusel de reels";
+"PostLikeConfirm" = "Confirmar like en post";
+"DownloadVideos" = "Descargar vídeos";
+"DownloadVideosDesc" = "Descargar vídeos de feed y stories con una pulsación larga";
+
+"Reels" = "Reels";
+"DownloadReels" = "Descargar reels";
+"HideOverlay" = "Ocultar Superposición";
+"ReelsLikeConfirm" = "Confirmar like en reels";
+"ReelsLongTap" = "Descargar con una pulsación larga";
+"ReelsLongTapDesc" = "Respaldo para versiones anteriores que no tienen el botón de descarga";
+
+"Stories" = "Stories";
+"DownloadStories" = "Descargar stories";
+"AnonymousStories" = "Ver anónimamente";
+"DisableAutoNext" = "Deshabilitar auto avance";
+"RemoveStoryPYMK" = "Eliminar \"Personas que quizá conozcas\"";
+
+"Downloader" = "Video Downloader";
+"AllFormats" = "Include all formats";
+"AllFormatsDesc" = "Adds all available formats to the download menu.\nNote: Most formats require re-encoding, which may affect download speed.";
+
+"Cache" = "Caché";
+"AutoClearCache" = "Borrar caché al iniciar";
+"ClearCache" = "Borrar caché";
+
+"Developer" = "Desarrolladores";
+
+"DiscordDesc" = "Unirse para Soporte, feedback, o un chat";
+"GithubDesc" = "Repositorio de Glow";
+"DvntmsDesc" = "Todas mis repos en un mismo lugar";
+
+"FollowMe" = "Sigue a %@ en Twitter";
+"DonateMe" = "Glow es completamente gratis. Siéntete libre de invitarme a un Café para apoyar su desarrollo";
+"StoreDesc" = "Consigue un certificado de desarrollador y disfruta de una amplia gama de apps exclusivas";
+
+"DeveloperFooter" = "Programado con ❤️";
+
+"DownloadVideo" = "Descargar vídeo";
+"DownloadStory" = "Descargar story";
+"Downloading" = "Descargando";
+"DownloadingVideo" = "Downloading video";
+"DownloadingAudio" = "Downloading audio";
+"Slow" = "Requires re-encoding";
+"Fast" = "Ultra fast";
+"MergingMedia" = "Merging media";
+"WaitsForConversion" = "Queued for conversion";
+"Error.Clipboard" = "Error. Check clipboard for log";
+"Cancel" = "Cancelar";
+"SavedToPhotos" = "Guardado en Fotos";
+"ImageNotFound" = "Imagen no encontrada";
+"MarkAsSeen" = "Marcar como visto";
+"MarkedAsSeen" = "Marcado como visto";
+"SomethingWentWrong" = "Algo salió mal";
+"GlowSettings" = "Ajustes de Glow";
+"FacebookSettings" = "Ajustes de Facebook";
+
+"Welcome.Download" = "Descargar Media";
+"Welcome.DownloadDesc" = "Descarga todo lo que quieras — vídeos, imágenes, Reels, e incluso stories.";
+"Welcome.Incognito" = "Modo Incógnito";
+"Welcome.IncognitoDesc" = "Permanece sin ser visto. Mira stories y márcalas como vistas sólo si tu quieres";
+"Welcome.Confirmation" = "Confirmación";
+"Welcome.ConfirmationDesc" = "¿Preocupado por likes accidentales? Ahora puedes relajarte.";
+"Welcome.Settings" = "Sencillez";
+"Welcome.SettingsDesc" = "Ajustes flexibles, intuitivos — todo a tu medida.";
+"Welcome.More" = "Y más";
+"Welcome.MoreDesc" = "Glow no es sólo una lista de características. Desbloquea incluso más herramientas para el comfort y la privacidad.";
+"Welcome.SettingsInfo" = "Los ajustes de Glow están disponibles con una pulsación larga en cualquier pestaña";
+"Continue" = "Continuar";
