--- a/Localizations/ru.lproj/Localizable.strings
+++ b/Localizations/ru.lproj/Localizable.strings
@@ -19,13 +19,17 @@
 "DisableAutoNext" = "Отключить авто-переход";
 "RemoveStoryPYMK" = "Убрать «Знакомых» в баннере";
 
+"Downloader" = "Загрузчик видео";
+"AllFormats" = "Отображать все форматы";
+"AllFormatsDesc" = "Добавляет в меню загрузки все доступные форматы.\nОбратите внимание: большинство из них требует перекодирования, что может повлиять на скорость загрузки.";
+
 "Cache" = "Кеш";
 "AutoClearCache" = "Очищать кеш при запуске";
 "ClearCache" = "Очистить кеш";
 
 "Developer" = "Разработчики";
 
-"DiscordDesc" = "Место для быстрая помощи, отзыва и общения";
+"DiscordDesc" = "Место для быстрой помощи, отзыва и общения";
 "GithubDesc" = "Репозиторий Glow";
 "DvntmsDesc" = "Все мои репозитории в одном месте";
 
@@ -38,6 +42,13 @@
 "DownloadVideo" = "Скачать видео";
 "DownloadStory" = "Скачать историю";
 "Downloading" = "Загрузка";
+"DownloadingVideo" = "Загрузка видео";
+"DownloadingAudio" = "Загрузка аудио";
+"Slow" = "Требуется конвертация";
+"Fast" = "Не требует конвертации";
+"MergingMedia" = "Объединение видео";
+"WaitsForConversion" = "В ожидании конвертации";
+"Error.Clipboard" = "Ошибка. Логи доступны в буфере обмена";
 "Cancel" = "Отмена";
 "SavedToPhotos" = "Сохранено в Фото";
 "ImageNotFound" = "Изображение не найдено";
@@ -45,6 +56,7 @@
 "MarkedAsSeen" = "Отмечено просмотренным";
 "SomethingWentWrong" = "Что-то пошло не так";
 "GlowSettings" = "Настройки Glow";
+"FacebookSettings" = "Настройки Facebook";
 
 "Welcome.Download" = "Загрузка медиа";
 "Welcome.DownloadDesc" = "Скачивайте всё, что вам по душе — видео, изображения, Reels и даже истории.";
