--- a/Localizations/Base.lproj/Localizable.strings
+++ b/Localizations/Base.lproj/Localizable.strings
@@ -19,6 +19,10 @@
 "DisableAutoNext" = "Disable auto advancing";
 "RemoveStoryPYMK" = "Remove \"People you may know\"";
 
+"Downloader" = "Video Downloader";
+"AllFormats" = "Include all formats";
+"AllFormatsDesc" = "Adds all available formats to the download menu.\nNote: Most formats require re-encoding, which may affect download speed.";
+
 "Cache" = "Cache";
 "AutoClearCache" = "Clear cache on startup";
 "ClearCache" = "Clear cache";
@@ -38,6 +42,13 @@
 "DownloadVideo" = "Download video";
 "DownloadStory" = "Download story";
 "Downloading" = "Downloading";
+"DownloadingVideo" = "Downloading video";
+"DownloadingAudio" = "Downloading audio";
+"Slow" = "Requires re-encoding";
+"Fast" = "Ultra fast";
+"MergingMedia" = "Merging media";
+"WaitsForConversion" = "Queued for conversion";
+"Error.Clipboard" = "Error. Check clipboard for log";
 "Cancel" = "Cancel";
 "SavedToPhotos" = "Saved to Photos";
 "ImageNotFound" = "Image not found";
@@ -45,6 +56,7 @@
 "MarkedAsSeen" = "Marked as seen";
 "SomethingWentWrong" = "Something went wrong";
 "GlowSettings" = "Glow settings";
+"FacebookSettings" = "Facebook settings";
 
 "Welcome.Download" = "Download Media";
 "Welcome.DownloadDesc" = "Download whatever you like — videos, images, Reels, and even stories.";
