--- a/Localizations/ar.lproj/Localizable.strings
+++ b/Localizations/ar.lproj/Localizable.strings
@@ -21,7 +21,8 @@
 
 "Downloader" = "مدير تنزيلات الفيديو";
 "AllFormats" = "تمكين جميع الصيغ";
-"AllFormatsDesc" = "يُضيف جميع الصيغ المتاحة إلى قائمة التنزيل.\nملاحظة: معظم الصيغ تتطلب إعادة ترميز، مما قد يؤثر على سرعة التنزيل.";
+"EncodingSpeed" = "سرعة اعادة الترميز";
+"EncodingSpeedDesc" = "سرعة إعادة ترميز الفيديو:\n• فائق السرعة (ultrafast): أقصى سرعة، جودة أقل، وحجم ملف أكبر.\n• سريع (faster): سرعة جيدة، وجودة متوسطة.\n• متوسط (medium): أفضل توازن بين السرعة والجودة، وحجم ملف أصغر.";
 
 "Cache" = "الملفات المؤقته";
 "AutoClearCache" = "تنظيف الملفات المؤقته عند بدء التطبيق";
