--- a/Localizations/ru.lproj/Localizable.strings
+++ b/Localizations/ru.lproj/Localizable.strings
@@ -21,7 +21,8 @@
 
 "Downloader" = "Загрузчик видео";
 "AllFormats" = "Отображать все форматы";
-"AllFormatsDesc" = "Добавляет в меню загрузки все доступные форматы.\nОбратите внимание: большинство из них требует перекодирования, что может повлиять на скорость загрузки.";
+"EncodingSpeed" = "Скорость обработки";
+"EncodingSpeedDesc" = "Скорость обработки видео:\n• Сверхбыстрая (ultrafast): Самая быстрая, но больший размер файла.\n• Быстрая (faster): Оптимальный баланс скорости и размера.\n• Средняя (medium): Медленнее, но минимальный размер файла.";
 
 "Cache" = "Кеш";
 "AutoClearCache" = "Очищать кеш при запуске";
